--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+venv/*.py
+venv/*.exe
+.env/
+.venv/
+env/
+**/venv
+**/env
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -158,3 +165,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+venv/*.py
+venv/*.exe
+.env/
+.venv/
+env/
+
+
